gobmkida/g0/play_gtp
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/play_gtp/src/interface/play_gtp.c:749:16: error: use of undeclared identifier 'commands_0'; did you mean 'commands'?
gtp_main_loop( commands_0, gtp_input); 
               ^~~~~~~~~~
               commands
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/play_gtp/src/interface/play_gtp.c:164:27: note: 'commands' declared here
static struct gtp_command commands[] = {
                          ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/play_gtp/src/obj/2/play_gtp.o] Error 1
